# ct-test

./: README.md  setup.sh
.github/workflows/: bandit.yml  fortify.yml
__MACOSX/workspaces/: ._database
hello-world-app/: Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
hello-world-app/helm-chart/: Chart.yaml  values-dev.yaml  values.yaml
hello-world-app/helm-chart/templates/: deployment.yaml  hpa.yaml  service.yaml
vars/: common.tfvars  database.tfvars
workspaces/database/: db.tf  firewalls.tf  networks.tf  providers.tf  versions.tf
workspaces/kubernetes/: apis.tf  firewalls.tf  main.tf  outputs.tf  sa.tf
