[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = "A FastAPI todo application"
authors = ["Dev Team <dev@company.com>"]
readme = "README.md"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "0.68.0"
uvicorn = "0.15.0"
psycopg2-binary = "2.8.6"
asyncpg = "0.27.0"
requests = "2.32.4"
faker = "13.3.4"
PyYAML = "5.3.1"
Jinja2 = "3.1.6"

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.0"
black = "^24.3.0"
flake8 = "^4.0.0"
mypy = "^0.910"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000 --reload"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
